version/0.17/_sources/api/ansys/additive/core/single_bead/MeltPool.rst.txt




MeltPool
========

.. py:class:: MeltPool(msg: ansys.api.additive.v0.additive_domain_pb2.MeltPool)
   :canonical: ansys.additive.core.single_bead.MeltPool





   Contains the melt pool size dimensions for each time step during a single bead simulation.
















   ..
       !! processed by numpydoc !!













Overview
--------
.. py:currentmodule:: MeltPool
.. tab-set::



    .. tab-item:: Methods

        .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~data_frame`
            - Get the data frame containing the melt pool data.







Import detail
-------------

.. code-block:: python

    from ansys.additive.core.single_bead import MeltPool




Method detail
-------------
.. py:method:: data_frame() -> pandas.DataFrame

   
   Get the data frame containing the melt pool data.

   Values are in meters.

   Indices:
       - ``bead_length``: Length of the bead at each time step.

   Columns:
       - :obj:`MeltPoolColumnNames.LENGTH`.
       - :obj:`MeltPoolColumnNames.WIDTH`.
       - :obj:`MeltPoolColumnNames.DEPTH`.
       - :obj:`MeltPoolColumnNames.REFERENCE_WIDTH`.
       - :obj:`MeltPoolColumnNames.REFERENCE_DEPTH`.















   ..
       !! processed by numpydoc !!


